Update tests for TagList